# rusd

./: .gitignore  Cargo.toml  Dockerfile  FILE_STRUCTURE.md  MVCC_IMPLEMENTATION.md  README.md  STORAGE_DESIGN.md  STORAGE_QUICK_REFERENCE.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
.skills/: kind-validation.md
benches/: rusd_bench.rs
benchmarks/: k8s-benchmark.sh
docs/: _config.yml  api-compatibility.md  architecture.md  benchmark-results.md  benchmarks.md  cli-reference.md  etcd-e2e-tests.md  getting-started.md  index.md  multi-node-plan.md  test-report.md
docs/assets/css/: style.scss
proto/etcdserverpb/: auth.proto  kv.proto  rpc.proto
proto/raftpb/: raft_internal.proto
scripts/: chaos-test.sh  etcd-e2e-compat.sh  k8s-test.sh  multi-node-test.sh  setup.sh  tls-test.sh
src/: lib.rs  main.rs
src/api/: auth_service.rs  cluster_service.rs  kv_service.rs  lease_service.rs  maintenance_service.rs  mod.rs  raft_internal_service.rs  watch_service.rs
src/auth/: mod.rs
src/cluster/: mod.rs
src/lease/: mod.rs
src/raft/: config.rs  log.rs  mod.rs  node.rs  state.rs  transport.rs
src/server/: mod.rs
src/storage/: INTEGRATION_GUIDE.md  backend.rs  compaction.rs  index.rs  mod.rs  mvcc.rs
src/watch/: mod.rs
tests/: integration_test.rs
