[package]
name = "rusd"
version = "0.2.0"
edition = "2021"
authors = ["Shailesh <shailesh.pant@gmail.com>"]
description = "A high-performance Rust replacement for etcd with full Kubernetes API parity"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
tokio-stream = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bcrypt = "0.15"
jsonwebtoken = "10.3"
crc32fast = "1.3"
snap = "1.1"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1"
rcgen = "0.14"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tonic = "0.11"
tokio-stream = "0.1"

[[bench]]
name = "rusd_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
